--- a/index.html
+++ b/index.html
@@ -2,65 +2,46 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visualization Dashboard</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f0f2f5;
-        }
-
-        .card {
-            background: white;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-            text-align: center;
-        }
-
-        .button-container {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            margin-top: 1rem;
-        }
-
-        a.button {
-            display: inline-block;
-            padding: 0.75rem 1rem;
-            background-color: #007BFF;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background 0.2s;
-        }
-
-        a.button:hover {
-            background-color: #0069d9;
-        }
-    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <div class="card">
-        <h1>Visualization Dashboard</h1>
-        <div class="button-container">
-            <a class="button" href="average_star_rating.html">Average Star Rating</a>
-            <a class="button" href="brands_bar_chart.html">Brands Bar Chart</a>
-            <a class="button" href="categories_bar_chart.html">Categories Bar Chart</a>
-            <a class="button" href="correlation_matrix.html">Correlation Matrix</a>
-            <a class="button" href="helpful_votes.html">Helpful Votes</a>
-            <a class="button" href="logistic_regression.html">Logistic Regression</a>
-            <a class="button" href="price_rating.html">Price Rating</a>
-            <a class="button" href="sentiment discrepancy.html">Sentiment Discrepancy</a>
-            <a class="button" href="star_rating.html">Star Rating</a>
-            <a class="button" href="verified_purchase.html">Verified Purchase</a>
+<body class="bg-gradient-to-br from-slate-100 to-slate-200 min-h-screen flex items-center justify-center p-4">
+    <div class="bg-white rounded-2xl shadow-2xl p-10 w-full max-w-lg text-center space-y-6">
+        <h1 class="text-3xl font-bold text-gray-800">📊 Visualization Dashboard</h1>
+        <div class="grid gap-4">
+            <a href="average_star_rating.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Average
+                Star Rating</a>
+            <a href="brands_bar_chart.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Brands
+                Bar Chart</a>
+            <a href="categories_bar_chart.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Categories
+                Bar Chart</a>
+            <a href="correlation_matrix.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Correlation
+                Matrix</a>
+            <a href="helpful_votes.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Helpful
+                Votes</a>
+            <a href="logistic_regression.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Logistic
+                Regression</a>
+            <a href="price_rating.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Price
+                Rating</a>
+            <a href="sentiment discrepancy.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Sentiment
+                Discrepancy</a>
+            <a href="star_rating.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Star
+                Rating</a>
+            <a href="verified_purchase.html"
+                class="block w-full py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-xl transition-all duration-200 shadow-sm hover:shadow-lg">Verified
+                Purchase</a>
         </div>
     </div>
 </body>
